keep footer in the bottom, avoid horizontal scroll, fix section names.

--- a/src/app/content-blocks/container/container.component.scss
+++ b/src/app/content-blocks/container/container.component.scss
@@ -1,9 +1,6 @@
 :host {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  flex: 1 0 auto;
 }
 .content {
   margin: 50px 10px 10px 10px;
-  flex: 1 0 auto;
 }
